--- a/templates/results.html
+++ b/templates/results.html
@@ -4,41 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
-
     <title>Results</title>
 </head>
 <body>
     <h1>Results</h1>
-    <table border="1">
-        <tr>
-            <th>Title</th>
-            <th>Authors</th>
-            <th>Main Author</th>
-            <th>Year</th>
-            <th>Journal Homepage</th>
-            <th>Impact Factor</th>
-            <th>Citation URL</th>
-            <th>Number of Citations</th>
-            <th>DOI</th>
-            <th>Journal Name</th>
-        </tr>
-        {% for result in results %}
-        <tr>
-            <td>{{ result.Title }}</td>
-            <td>{{ result.Authors }}</td>
-            <td>{{ result.Main_Author }}</td>
-            <td>{{ result.Year }}</td>
-            <td>{{ result.Journal_Homepage }}</td>
-            <td>{{ result.Impact_Factor }}</td>
-            <td><a href="{{ result.Citation_URL }}">Link</a></td>
-            <td>{{ result.Number_of_Citations }}</td>
-            <td>{{ result.DOI }}</td>
-            <td>{{ result.Journal_Name }}</td>
-        </tr>
-        {% endfor %}
+    <table>
+        <thead>
+            <tr>
+                <th>Title</th>
+                <th>Authors</th>
+                <th>Main Author</th>
+                <th>Year</th>
+                <th>Impact Factor</th>
+                <th>Citation URL</th>
+                <th>Number of Citations</th>
+                <th>DOI</th>
+                <th>Journal Name</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for result in results %}
+            <tr>
+                <td>{{ result.Title }}</td>
+                <td>{{ result.Authors }}</td>
+                <td>{{ result['Main Author'] }}</td>
+                <td>{{ result.Year }}</td>
+                <td>{{ result['Impact Factor'] }}</td>
+                <td><a href="{{ result['Citation URL'] }}" target="_blank">Link</a></td>
+                <td>{{ result['Number of Citations'] }}</td>
+                <td>{{ result.DOI }}</td>
+                <td>{{ result['Journal Name'] }}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
     </table>
-    <form action="/download" method="post">
-        <input type="hidden" name="results" value="{{ results }}">
+    <form method="POST" action="/download">
+        <input type="hidden" name="results" value='{{ results | tojson | safe }}'>
         <button type="submit">Download CSV</button>
     </form>
 </body>
